--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,1 @@
-NEXT_PUBLIC_API_URL=/api
-BACKEND_URL=https://your-python-backend-url.com  # Replace with your actual deployed Python backend URL
+BACKEND_URL=https://backend-xi-nine-99.vercel.app
